fixed overflow problem on contact page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,17 +1,34 @@
 // Widescreens
 @include mediaXl {
+  .bio-image {
+    width: 300px !important;
+  }
   .projects {
     grid-template-columns: repeat(5, 1fr);
   }
 }
 // Desktop & Laptop
 @include mediaLg {
+  .bio-image {
+    width: 300px !important;
+  }
   .projects {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 // Tables
 @include mediaMd {
+  #contact {
+    .boxes {
+      div {
+        width: 100%;
+        font-size: 1.3rem;
+      }
+    }
+  }
+  .bio-image {
+    width: 300px !important;
+  }
   main {
     align-items: center;
     text-align: center;
@@ -19,7 +36,6 @@
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
-      font-size: 2px;
       font-size: 3.2rem !important;
     }
   }
@@ -63,8 +79,29 @@
 }
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  #contact {
+    .boxes {
+      div {
+        width: 100%;
+        font-size: 1rem;
+      }
+    }
+  }
+  .menu-nav {
+    height: 70vh;
+    transform: translate3d(0, 100%, 0);
+    font-size: 24px;
+  }
+  .menu-branding {
+    height: 30vh;
+    transform: translate3d(0, -100%, 0);
+    .portrait {
+      width: 150px;
+      height: 150px;
+    }
+  }
+  .bio-image {
+    width: 230px !important;
   }
   .projects {
     grid-template-columns: 1fr;
